--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <div class="logo" onclick="switchPage('home')">L.K. Capital.</div>
             <div class="nav-right">
                 <div class="nav-link active" id="nav-home" onclick="switchPage('home')">Home</div>
+                <a href="services.html" class="nav-link">Services</a>
                 <a href="analysis.html" class="nav-link">Strategy Analysis</a> 
                 <a href="research.html" class="nav-link">Research</a>
                 <div class="nav-link" id="nav-about" onclick="switchPage('about')">About</div>
