--- a/analysis.html
+++ b/analysis.html
@@ -203,7 +203,8 @@
                             <div class="lang-cn"><p>上周 XAUUSD 展现出强劲的多头机构订单流。价格在两次重要的 **H4 FVG (公允价值缺口) 回补**后均获得了有力支撑，并且在关键的上升趋势线（如您图中所标记）上进行了三次成功的低点测试，每次测试都伴随着快速的向上反弹。这清楚表明了机构在回撤区域的坚定买入意愿。</p></div>
                             <div class="lang-en"><p>Last week, XAUUSD demonstrated strong institutional bullish order flow. Price found robust support after two significant **H4 FVG (Fair Value Gap) mitigations**, and successfully tested the crucial ascending trendline (as marked in your chart) three times, each followed by a swift upward bounce. This clearly indicates strong institutional buying intent in retracement zones.</p></div>
                             
-                            <!-- 💡 请确保将此图片文件上传到 assets/analysis/ 文件夹中 --><div class="chart-container"><img src="assets/analysis/xauusd_weekly_outlook_nov25.jpg" alt="XAUUSD Weekly Outlook Chart Analysis" loading="lazy"></div>
+                            <!-- 修正后的图片路径 -->
+                            <div class="chart-container"><img src="assets/analysis/xauusd_nov25.jpg" alt="XAUUSD Weekly Outlook Chart Analysis" loading="lazy"></div>
 
                             <div class="lang-cn">
                                 <h3>📊 核心逻辑复盘</h3>
