--- a/analysis.html
+++ b/analysis.html
@@ -372,7 +372,7 @@
             groupOrder.forEach((groupName, gIndex) => {
                 const groupHeader = document.createElement('div');
                 groupHeader.className = `group-header ${gIndex === 0 ? 'open' : ''}`; 
-                groupHeader.innerHTML = `<span>${groupName}</span> <svg viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>`;
+                groupHeader.innerHTML = `<span>${groupName}</span>`;
                 
                 const groupContent = document.createElement('div');
                 groupContent.className = `group-content ${gIndex === 0 ? 'show' : ''}`;
@@ -436,3 +436,4 @@
     </script>
 </body>
 </html>
+
